[package]
name = "pkmn-rs"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
vulkano = "0.12"
vulkano-shaders = "0.12"
image = "0.21"
glfw = { version = "0.29.0", features = ["vulkan"]}
vk-sys = "0.4.0"
vulkano-win = "0.12"
cgmath = "0.17.0"
rand = "0.7.0-pre.1"
serde = { version = "1.0.94", features = ["derive", "rc"]}
serde_json = "1.0.40"
actix = "0.7"